# AI-Voice-Agent

./: .gitignore  HINDI_VOICE_SETUP.md  MIGRATION_SUMMARY.md  README.md  example.env  pyproject.toml  render.yaml  requirements.txt  run_server.py
backend/: app.py  config.py  schemas.py
backend/services/: gemini_client.py
frontend/: animations.js  app.js  index.html  styles.css  threejs-scene.js
src/anvaya_voice_agent/: __init__.py  chat.py  cli.py  config.py  exceptions.py  gradio_app.py  tts.py
src/riverwood_voice_agent/: __init__.py  audio.py  cli.py  config.py  exceptions.py  gradio_app.py  logging_config.py  pipeline.py
tests/: test_config.py
